# dependencies

./: LICENSE  Makefile  README.md  dependencies  dependencies.c  pyproject.toml  setup.py
src/dependencies/: __init__.py
