[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dependencies"
version = "0.1.0"
description = "Prints hello world."
requires-python = ">=3.8"

[project.scripts]
dependencies = "dependencies:main"

[tool.setuptools.packages.find]
where = ["src"]
